--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -52,7 +52,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextContent" datatype="html">
-        <source>contenu ohlala</source>
+        <source>some content</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">29</context>
@@ -136,14 +136,14 @@
         </context-group>
       </trans-unit>
       <trans-unit id="lang.fr" datatype="html">
-        <source>French</source>
+        <source>🇫🇷 French</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.en" datatype="html">
-        <source>English</source>
+        <source>🇬🇧 English</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">5</context>
