--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -3,70 +3,70 @@
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="app.angularLogo" datatype="html">
-        <source>Angular Logo</source>
+        <source>Logo Angular</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.welcomeTitle" datatype="html">
-        <source>Welcome</source>
+        <source>Bienvenu.e</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">9</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.title" datatype="html">
-        <source><x id="INTERPOLATION" equiv-text="{{ title }}"/> app is running!</source>
+        <source>L'application <x id="INTERPOLATION" equiv-text="{{ title }}"/> tourne !</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.accountTitle" datatype="html">
-        <source>Account</source>
+        <source>Compte</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.accountMessage" datatype="html">
-        <source>Fill the form below to create an account:</source>
+        <source>Remplissez le formulaire ci-dessous pour créer un compte :</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextTilte" datatype="html">
-        <source>Next Steps</source>
+        <source>Prochaines étapes</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextMessage" datatype="html">
-        <source>What do you want to do next with your app?</source>
+        <source>Que voulez-vous faire ensuite avec votre application ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextContent" datatype="html">
-        <source>contenu ohlala</source>
+        <source>du contenu</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">29</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.svgTitle" datatype="html">
-        <source>Gray Clouds Background</source>
+        <source>Fond nuages gris</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">38</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.title" datatype="html">
-        <source> Create an account </source>
+        <source> Créer un compte </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">5</context>
@@ -87,63 +87,63 @@
         </context-group>
       </trans-unit>
       <trans-unit id="form.emailInvalid" datatype="html">
-        <source> Invalid email </source>
+        <source> Email invalide </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">27,29</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalid" datatype="html">
-        <source>Password must :</source>
+        <source>Le mot de passe doit :</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">50</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidNbCharacters" datatype="html">
-        <source> Be longer than 8 characters </source>
+        <source> Faire plus de 8 caractères </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">52,54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidUpper" datatype="html">
-        <source> Contain 1 upper case letter </source>
+        <source> Contenir au moins une majuscule </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">55,57</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidSpecial" datatype="html">
-        <source> Contain 1 special character </source>
+        <source> Contenir au moins un caractère spécial </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">58,60</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.submit" datatype="html">
-        <source> Submit </source>
+        <source> Créer </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">72,74</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.title" datatype="html">
-        <source>Lang</source>
+        <source>Langue</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.fr" datatype="html">
-        <source>French</source>
+        <source>🇫🇷 Français</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.en" datatype="html">
-        <source>English</source>
+        <source>🇬🇧 Anglais</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">5</context>
