--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -73,14 +73,14 @@
         </context-group>
       </trans-unit>
       <trans-unit id="form.error" datatype="html">
-        <source> <x id="INTERPOLATION" equiv-text="{{ registerResult.message }}"/> </source>
+        <source>Error form invalid</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">8,10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.success" datatype="html">
-        <source> <x id="INTERPOLATION" equiv-text="{{ registerResult.message }}"/> </source>
+        <source>Success form valid</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">11,13</context>
@@ -136,14 +136,16 @@
         </context-group>
       </trans-unit>
       <trans-unit id="lang.fr" datatype="html">
-        <source>🇫🇷 French</source>
+        <source>French</source>
+        <target>🇫🇷 French</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.en" datatype="html">
-        <source>🇬🇧 English</source>
+        <source>English</source>
+        <target>🇬🇧 English</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">5</context>
