--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -3,147 +3,167 @@
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="app.angularLogo" datatype="html">
-        <source>Logo Angular</source>
+        <source>Angular Logo</source>
+        <target>Logo Angular</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.welcomeTitle" datatype="html">
-        <source>Bienvenu.e</source>
+        <source>Welcome</source>
+        <target>Bienvenu.e</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">9</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.title" datatype="html">
-        <source>L'application <x id="INTERPOLATION" equiv-text="{{ title }}"/> tourne !</source>
+        <source><x id="INTERPOLATION" equiv-text="{{ title }}"/> app is running!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">17</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.accountTitle" datatype="html">
-        <source>Compte</source>
+        <source>Account</source>
+        <target>Compte</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">21</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.accountMessage" datatype="html">
-        <source>Remplissez le formulaire ci-dessous pour créer un compte :</source>
+        <source>Fill the form below to create an account:</source>
+        <target>Remplissez le formulaire ci-dessous pour créer un compte :</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextTilte" datatype="html">
-        <source>Prochaines étapes</source>
+        <source>Next Steps</source>
+        <target>Étape suivante</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextMessage" datatype="html">
-        <source>Que voulez-vous faire ensuite avec votre application ?</source>
+        <source>What do you want to do next with your app?</source>
+        <target>Que voulez-vous faire avec votre application ?</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.nextContent" datatype="html">
-        <source>du contenu</source>
+        <source>contenu ohlala</source>
+        <target>du contenu</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">29</context>
         </context-group>
       </trans-unit>
       <trans-unit id="app.svgTitle" datatype="html">
-        <source>Fond nuages gris</source>
+        <source>Gray Clouds Background</source>
+        <target>Fond nuages gris</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">38</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.title" datatype="html">
-        <source> Créer un compte </source>
+        <source> Create an account </source>
+        <target>Créer un compte</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.error" datatype="html">
-        <source> <x id="INTERPOLATION" equiv-text="{{ registerResult.message }}"/> </source>
+        <source>Error form invalid</source>
+        <target>Erreur, formulaire invalid</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">8,10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.success" datatype="html">
-        <source> <x id="INTERPOLATION" equiv-text="{{ registerResult.message }}"/> </source>
+        <source>Success form valid</source>
+        <target>Formulaire correct</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">11,13</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.emailInvalid" datatype="html">
-        <source> Email invalide </source>
+        <source> Invalid email </source>
+        <target>Email invalide</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">27,29</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalid" datatype="html">
-        <source>Le mot de passe doit :</source>
+        <source>Password must :</source>
+        <target>Le mot de passe doit</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">50</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidNbCharacters" datatype="html">
-        <source> Faire plus de 8 caractères </source>
+        <source> Be longer than 8 characters </source>
+        <target>Faire plus de 8 caractères</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">52,54</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidUpper" datatype="html">
-        <source> Contenir au moins une majuscule </source>
+        <source> Contain 1 upper case letter </source>
+        <target>Contenir au moins une majuscule</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">55,57</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.passwordInvalidSpecial" datatype="html">
-        <source> Contenir au moins un caractère spécial </source>
+        <source> Contain 1 special character </source>
+        <target>Contenir au moins un caractère spécial</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">58,60</context>
         </context-group>
       </trans-unit>
       <trans-unit id="form.submit" datatype="html">
-        <source> Créer </source>
+        <source> Submit </source>
+        <target>Créer mon compte</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/form/form.component.html</context>
           <context context-type="linenumber">72,74</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.title" datatype="html">
-        <source>Langue</source>
+        <source>Lang</source>
+        <target>Langue</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.fr" datatype="html">
-        <source>🇫🇷 Français</source>
+        <source>French</source>
+        <target>🇫🇷 Français</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="lang.en" datatype="html">
-        <source>🇬🇧 Anglais</source>
+        <source>English</source>
+        <target>🇬🇧 Anglais</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/lang-select/lang-select.component.html</context>
           <context context-type="linenumber">5</context>
