--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -20,6 +20,7 @@
       </trans-unit>
       <trans-unit id="app.title" datatype="html">
         <source><x id="INTERPOLATION" equiv-text="{{ title }}"/> app is running!</source>
+        <target>L'application <x id="INTERPOLATION" equiv-text="{{ title }}"/> est lancée !</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
           <context context-type="linenumber">17</context>
